add undraw images

--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
     <!-- About Section -->
     <section id="about">
         <h1>Illustrations</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>How it works</h2>
+                <img src="img/undraw_remotely_light.svg" alt="remotely" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>How it works</h2>
+                <img src="img/undraw_Hiking_re_light.svg" alt="hiking" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>How it works</h2>
+                <img src="img/undraw_online_gallery_light.svg" alt="online" id="image3">
+            </div>
+        </div>
     </section>
     <!-- Projects Section -->
     <section id="projects">
