--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     </section>
     <!-- About Section -->
     <section id="about">
-        <h1>Illustrations</h1>
+        <h2><strong>Illustrations</strong></h2>
         <div class="about-container">
             <div class="image-container">
                 <h2>How it works</h2>
-                <img src="img/undraw_remotely_light.svg" alt="remotely" id="image1">
+                <img src="img/undraw_Nature_fun_re_iney_light.svg" alt="remotely" id="image1">
             </div>
             <div class="image-container">
                 <h2>How it works</h2>
-                <img src="img/undraw_Hiking_re_light.svg" alt="hiking" id="image2">
+                <img src="img/undraw_adventure_map_hnin.svg" alt="hiking" id="image2">
             </div>
             <div class="image-container">
                 <h2>How it works</h2>
