--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="about-container">
             <div class="image-container">
                 <h2>How it works</h2>
-                <img src="img/undraw_Nature_fun_re_iney_light.svg" alt="remotely" id="image1">
+                <img src="img/undraw_Nature_fun_re_iney_light.svg" alt="nature" id="image1">
             </div>
             <div class="image-container">
                 <h2>How it works</h2>
-                <img src="img/undraw_adventure_map_hnin.svg" alt="hiking" id="image2">
+                <img src="img/undraw_adventure_map_hnin.svg" alt="adventure" id="image2">
             </div>
             <div class="image-container">
                 <h2>How it works</h2>
@@ -45,6 +45,19 @@
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quod eaque laborum esse odio
+                assumenda, ducimus nostrum quam eius quo fugit laboriosam ipsa quidem. Cum quos itaque nisi delectus
+                aspernatur?</p>
+        </div>
     </section>
     <!-- Contact Section -->
     <section id="contact">
