add font awesome icons

--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
     </section>
     <!-- Contact Section -->
     <section id="contact">
-
+        <div class="social-icons">
+            <i class="fab fa-github-square"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-facebook-square"></i>
+        </div>
+        </div>
     </section>
     <!-- Script -->
     <script src="script.js"></script>
