add dark mode toggle

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+    <!-- Dark Mode Switch -->
+    <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span class="toggle-text">Light Mode</span>
+            <i class="fas fa-sun"></i>
+        </span>
+        <label class="theme-switch">
+            <input type="checkbox">
+            <div class="slider round"></div>
+        </label>
+    </div>
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">Home</a>
@@ -34,7 +45,7 @@
             </div>
             <div class="image-container">
                 <h2>How it works</h2>
-                <img src="img/undraw_adventure_map_hnin.svg" alt="adventure" id="image2">
+                <img src="img/undraw_adventure_map_light.svg" alt="adventure" id="image2">
             </div>
             <div class="image-container">
                 <h2>How it works</h2>
