add wording and links

--- a/index.html
+++ b/index.html
@@ -24,54 +24,54 @@
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#about">Pictures</a>
+        <a href="#projects">Buttons</a>
+        <a href="#contact">Icons</a>
     </nav>
     <!-- Home Section -->
     <section id="home">
         <div class="title-group">
-            <h1>Title here</h1>
-            <h2>Welcome to the Website!</h2>
+            <h1>Dark or Light?</h1>
+            <h2>Choose your theme</h2>
         </div>
     </section>
     <!-- About Section -->
     <section id="about">
-        <h2><strong>Illustrations</strong></h2>
+        <h2><strong>Pictures</strong></h2>
         <div class="about-container">
             <div class="image-container">
-                <h2>How it works</h2>
+                <h2>One walk</h2>
                 <img src="img/undraw_Nature_fun_re_light.svg" alt="nature" id="image1">
             </div>
             <div class="image-container">
-                <h2>How it works</h2>
+                <h2>Many ways</h2>
                 <img src="img/undraw_adventure_map_light.svg" alt="adventure" id="image2">
             </div>
         </div>
     </section>
     <!-- Projects Section -->
     <section id="projects">
-        <h1>Buttons</h1>
+        <h2>Buttons</h2>
         <div class="buttons">
-            <button class="primary">Primary</button>
-            <button class="secondary">Secondary</button>
-            <button class="primary" disabled>Disabled</button>
-            <button class="outline">Outline</button>
-            <button class="secondary outline">Alt outline</button>
-            <button class="outline" disabled>Disabled</button>
+            <button class="primary">these</button>
+            <button class="secondary">are</button>
+            <button class="primary" disabled>just</button>
+            <button class="outline">buttons</button>
+            <button class="secondary outline">for</button>
+            <button class="outline" disabled>practice</button>
         </div>
         <div class="text-box" id="text-box">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quod eaque laborum esse odio
-                assumenda, ducimus nostrum quam eius quo fugit laboriosam ipsa quidem. Cum quos itaque nisi delectus
-                aspernatur?</p>
+            <p>Practice makes perfect, that's why I made this web page to play around with JavaScript and practice some
+                concepts. Changing the mode of the web page seems to be quite a nice feature. <br> Hope you enjoy it.
+            </p>
         </div>
     </section>
     <!-- Contact Section -->
     <section id="contact">
         <div class="social-icons">
-            <i class="fab fa-github-square"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-facebook-square"></i>
+            <a href="https://github.com/lenablank"><i class="fab fa-github-square"></i></a>
+            <a href="https://www.linkedin.com/in/elena-blank/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/lena.blank.9"><i class="fab fa-facebook-square"></i></a>
         </div>
         </div>
     </section>
